# jeanfrederic_gauron_test

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json
question_a/: CMakeLists.txt  README.md
question_a/src/: overlap.h
question_a/test/: test_overlap.cc
question_b/: CMakeLists.txt  README.md  vcpkg.json
question_b/src/: utils.h  version.h
question_b/test/: test_version.cc
